# Emscripten_map_test

./: .gitignore  CMakeLists.txt  Geometry.c  Geometry.h  Index.html  MapTest.js  gpc.c  gpc.h  hw.cpp  hw.html  hw.js  index.html  main.cpp
plast/: ColorScale.txt  ConturLabels.txt  Conturs.txt  CutArea.txt  IsoPolygons.txt  Isolines.txt  MapDrawParams.ini  Sprites.txt  WellLabels.txt  Wells.txt  Wells2.txt
plast2/: Clusts.txt  ColorScale.txt  ConturLabels.txt  Conturs.txt  CutArea.txt  Isolines.txt  MapDrawParams.ini  Sprites.txt  WellLabels.txt  Wells.txt  Wells2.txt
